--- a/index.html
+++ b/index.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
-    <header></header>
-    <main></main>
-    <section></section>
-    <section></section>
-    <footer></footer>
-    
+    <nav class="nav">
+        <h3>Diario</h3>
+        <ul class="nav__menu">
+            <li><a href="">Nosotros</a></li>
+            <li><a href="">Contacto</a></li>
+            <li><input class="input-menu" type="text" name="buscar" placeholder="buscar..." /></li>
+        </ul>
+    </nav>
+
+    <div class="contenedor row">
+        <!--<nav class="col-12">
+            Voy a 
+        </nav>-->
+        <main class="col-12 col-md-8">
+            escribir
+        </main>
+
+        <aside class="col-12 col-md-4 d-none d-md-block">
+            cualquier
+        </aside>
+
+        <footer class="col-12">
+            palabra
+        </footer>
+    </div>
 </body>
+
 </html>
