--- a/index.html
+++ b/index.html
@@ -137,13 +137,15 @@
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 </p>
             </div>
-            <div class="aside__listado-tags">
+            <div class="tags">
                 <h1>Tags </h1>
+                <div class="a__tags">
                 <ul>
-                    <li><button class="aside__listado-tags__button">Viajes</button></li>
-                    <li><button class="aside__listado-tags__button">Noticias</button></li>
-                    <li><button class="aside__listado-tags__button">Comida</button></li>
+                    <li><a class="aside__tags-link" href="#">Viajess</a></li>
+                    <li><a class="aside__tags-link" href="#">Noticias</a></li>
+                    <li><a class="aside__tags-link" href="#">Comidas</a></li>
                 </ul>
+            </div>
             </div>
             <div class="aside__listado-noticias_destacadas">
                 <h1>Destacados </h1>
