--- a/index.html
+++ b/index.html
@@ -134,17 +134,15 @@
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
                 </p>
             </div>
             <div class="tags">
-                <h1>Tags </h1>
-                <div class="a__tags">
-                <ul>
-                    <li><a class="aside__tags-link" href="#">Viajess</a></li>
-                    <li><a class="aside__tags-link" href="#">Noticias</a></li>
-                    <li><a class="aside__tags-link" href="#">Comidas</a></li>
-                </ul>
+                <h1>Tags</h1>
+                <div class="contenedor aside__tags">
+                    <a class="aside__tags-link" href="#">Viajes</a>
+                    <a class="aside__tags-link" href="#">Noticias</a>
+                    <a class="aside__tags-link" href="#">Comidas</a>
             </div>
             </div>
             <div class="aside__listado-noticias_destacadas">
@@ -166,14 +164,6 @@
                 </div>
             </div>
     </aside>
-
-    <div class="newsletter">
-        <h2>Lorem ipsum dolor sit amet</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-        <div class="group">
-            <input type="text" name=""><button>Suscríbete</button>
-        </div>
-    </div>
 
     <footer class="col-12">
         <p>Todos los derechos reservados</p>
