--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@
                     </p>
                 </div>
             </div>
-
         </main>
 
         <aside class="col-12 col-md-4 d-none d-md-block">
@@ -143,7 +142,7 @@
                     <a class="aside__tags-link" href="#">Viajes</a>
                     <a class="aside__tags-link" href="#">Noticias</a>
                     <a class="aside__tags-link" href="#">Comidas</a>
-            </div>
+                </div>
             </div>
             <div class="aside__listado-noticias_destacadas">
                 <h1>Destacados </h1>
@@ -163,11 +162,19 @@
                         src="https://picsum.photos/200/200?random=9" />
                 </div>
             </div>
-    </aside>
+        </aside>
 
-    <footer class="col-12">
-        <p>Todos los derechos reservados</p>
-    </footer>
+        <div class="newsletter">
+            <h2>Lorem ipsum dolor sit amet</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+            <div class="group">
+                <input type="text" name=""><button>Suscríbete</button>
+            </div>
+        </div>
+
+        <footer class="col-12">
+            <p>Todos los derechos reservados</p>
+        </footer>
 
 </body>
 
