--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="noticia">
                 <div class="cabecera">
                     <h2>
-                        Lorem ipsum dolor sit amet,
+                        Lorem ipsum dolor sit amet.
                     </h2>
                 </div>
                 <div class="cuerpo">
@@ -45,24 +45,7 @@
             <div class="noticia">
                 <div class="cabecera">
                     <h2>
-                        Lorem ipsum dolor sit amet,
-                    </h2>
-                </div>
-                <div class="cuerpo">
-                    <div class="noticia__img">
-                        
-                    </div>
-                    <!-- <img src="https://picsum.photos/200/300?random=1" /> -->
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                </div>
-            </div>
-
-            <div class="noticia">
-                <div class="cabecera">
-                    <h2>
-                        Lorem ipsum dolor sit amet,
+                        Lorem ipsum dolor sit amet.
                     </h2>
                 </div>
                 <div class="cuerpo">
@@ -79,7 +62,7 @@
             <div class="noticia">
                 <div class="cabecera">
                     <h2>
-                        Lorem ipsum dolor sit amet,
+                        Lorem ipsum dolor sit amet.
                     </h2>
                 </div>
                 <div class="cuerpo">
@@ -96,7 +79,7 @@
             <div class="noticia">
                 <div class="cabecera">
                     <h2>
-                        Lorem ipsum dolor sit amet,
+                        Lorem ipsum dolor sit amet.
                     </h2>
                 </div>
                 <div class="cuerpo">
@@ -113,7 +96,24 @@
             <div class="noticia">
                 <div class="cabecera">
                     <h2>
-                        Lorem ipsum dolor sit amet,
+                        Lorem ipsum dolor sit amet.
+                    </h2>
+                </div>
+                <div class="cuerpo">
+                    <div class="noticia__img">
+                        
+                    </div>
+                    <!-- <img src="https://picsum.photos/200/300?random=1" /> -->
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                </div>
+            </div>
+
+            <div class="noticia">
+                <div class="cabecera">
+                    <h2>
+                        Lorem ipsum dolor sit amet.
                     </h2>
                 </div>
                 <div class="cuerpo">
